<resources>
    <string name="app_name">Hoai Duc</string>
    <string name="settingButtonText">o</string>
    <string name="trenCungText"><![CDATA[Đã hành hạ nhau]]></string>
    <string name="donVi">days</string>
    <string name="counter">10</string>
    <string name="name1">Đụt Đụt</string>
    <string name="age1">26</string>
    <string name="horo1">Leo</string>
    <string name="heart">heart</string>
    <string name="name2">Hoài Hoài</string>
    <string name="age2">22</string>
    <string name="horo2">HoroScope</string>
    <string name="title_activity_setting">Cài đặt</string>
    <!--<string name="action_settings">Settings</string>-->
    <string name="todo">TODO</string>
</resources>
