<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Controller.CounterActivity">

    <ImageButton
        android:id="@+id/settingButton"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="5dp"
        android:layout_marginTop="38dp"
        android:background="@null"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_settings_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.constraint.ConstraintLayout
        android:id="@+id/circle"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/trenCungText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/trenCungText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/counterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/counter"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="70sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

        <TextView
            android:id="@+id/donViText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/donVi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/counterText" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.github.abdularis.civ.CircleImageView
                android:id="@+id/avatar1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:src="@drawable/hoai"
                app:strokeColor="@color/vienHinhTron"
                app:strokeWidth="1px" />

            <TextView
                android:id="@+id/nameText1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:fontFamily="sans-serif"
                android:text="@string/name1"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:typeface="sans" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center">

                <TextView
                    android:id="@+id/age1"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/circle_age"
                    android:fontFamily="sans-serif"
                    android:paddingTop="4dp"
                    android:text="@string/age1"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/holo1"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/circle_horo"
                    android:fontFamily="sans-serif"
                    android:paddingTop="4dp"
                    android:text="@string/horo1"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:typeface="sans" />

            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/heart"
            android:paddingBottom="40dp"
            android:src="@drawable/heart" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.github.abdularis.civ.CircleImageView
                android:id="@+id/avatar2"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:src="@drawable/dut"
                app:strokeColor="@color/vienHinhTron"
                app:strokeWidth="1px" />

            <TextView
                android:id="@+id/nameText2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:fontFamily="sans-serif"
                android:text="@string/name2"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:typeface="sans" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/age2"
                    android:layout_width="35dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/circle_age"
                    android:fontFamily="sans-serif"
                    android:paddingTop="4dp"
                    android:text="@string/age2"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/holo2"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/circle_horo"
                    android:fontFamily="sans-serif"
                    android:paddingTop="4dp"
                    android:text="@string/horo2"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:typeface="sans" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>